# fastapi-react-docker-cicd

./: .gitignore
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: README.md  api-contract-check.yml  backend-ci.yml  backend-docker-check.yml  ci.yml  docker-check.yml  e2e.yml  frontend-ci.yml  frontend-docker-check.yml
backend/: pyproject.toml
backend/docker/: Dockerfile  docker-compose.yml
backend/src/: main.py
backend/tests/: test_main.py
frontend/: orval.config.js  package-lock.json  package.json  playwright.config.ts
frontend/docker/: Dockerfile  docker-compose.yml
frontend/src/: App.test.tsx  App.tsx
frontend/tests/e2e/: smoke.spec.ts
